# macsim

./: autogen.sh  configure.in  macsim-sst.patch
.obj/: Makefile.am
def/: allocate_interface.def  dcache.param.def  exec_interface.def  frontend_interface.def  mc.param.def  pref_internal.param.def  retire_interface.def  schedule_interface.def  statistics_knobs.param.def  sw_pref.param.def  tlb.param.def
doc/doxygen/html/: all__knobs_8h_source.html  all__stats_8h_source.html  allocate_8h_source.html  allocate__interface_8h_source.html  allocate__smc_8h_source.html  annotated.html  assert__macros_8h_source.html  bp_8h_source.html  bp__gshare_8h_source.html  bp__targ_8h_source.html  bug__detector_8h_source.html  cache_8h_source.html  classAbstractStat-members.html  classAbstractStat.html  classCOUNT__Stat-members.html  classCOUNT__Stat.html  classCoreStatistics-members.html  classCoreStatistics.html  classDISTMember__Stat-members.html  classDISTMember__Stat.html  classDIST__Stat-members.html  classDIST__Stat.html  classGlobalStatistics-members.html  classGlobalStatistics.html  classKnobEntryTokenizer-members.html  classKnobEntryTokenizer.html  classKnobTemplate-members.html  classKnobTemplate.html  classKnobTemplate_3_01string_01_4-members.html  classKnobTemplate_3_01string_01_4.html  classKnobsContainer-members.html  classKnobsContainer.html  classLINE__Stat-members.html  classLINE__Stat.html  classPERCENT__Stat-members.html  classPERCENT__Stat.html  classPER__1000__INST__Stat-members.html  classPER__1000__INST__Stat.html  classPER__1000__PRET__INST__Stat-members.html  classPER__1000__PRET__INST__Stat.html  (+331 more)
doc/doxygen/html/search/: all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_68.html  all_69.html  all_6b.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  all_71.html  all_72.html  all_73.html  all_74.html  all_75.html  all_77.html  all_7e.html  classes_61.html  classes_62.html  classes_63.html  classes_64.html  classes_65.html  classes_66.html  classes_67.html  classes_68.html  classes_69.html  classes_6b.html  classes_6c.html  classes_6d.html  classes_6e.html  classes_70.html  classes_71.html  classes_72.html  classes_73.html  classes_74.html  (+39 more)
doc/doxygen/latex/: annotated.tex  classAbstractStat.eps  classAbstractStat.tex  classCOUNT__Stat.eps  classCOUNT__Stat.tex  classCoreStatistics.tex  classDISTMember__Stat.eps  classDISTMember__Stat.tex  classDIST__Stat.eps  classDIST__Stat.tex  classGlobalStatistics.tex  classKnobEntryTokenizer.tex  classKnobTemplate.eps  classKnobTemplate.tex  classKnobTemplate_3_01string_01_4.eps  classKnobTemplate_3_01string_01_4.tex  classKnobsContainer.tex  classLINE__Stat.eps  classLINE__Stat.tex  classPERCENT__Stat.eps  classPERCENT__Stat.tex  classPER__1000__INST__Stat.eps  classPER__1000__INST__Stat.tex  classPER__1000__PRET__INST__Stat.eps  classPER__1000__PRET__INST__Stat.tex  classPER__CYCLE__Stat.eps  classPER__CYCLE__Stat.tex  classPER__INST__Stat.eps  classPER__INST__Stat.tex  classProcessorStatistics.tex  classRATIO__Stat.eps  classRATIO__Stat.tex  classabstract__knob__c.eps  classabstract__knob__c.tex  classall__knobs__c.tex  classall__stats__c.tex  classallocate__c.tex  classbp__data__c.tex  classbp__dir__base__c.eps  classbp__dir__base__c.tex  (+123 more)
params/: iris_params_ring  params_gtx8800  params_hetero_1_6  params_merge_16core  params_merge_32core  params_merge_8core  params_ptx_16core  params_ptx_32core  params_ptx_8core  params_ptx_8core_test  params_ptx_8core_test_memory  params_x86_big  params_x86_small
scripts/: Makefile.am  Makefile.in  interface-pp.pl  run_interface
src/: Makefile.am  ei_power.cc  ei_power.h  router.cc  router.h  rrip.cc  rrip.h  tadip.cc  tadip.h  ucp.cc  ucp.h
src/orion/: orion_link  orion_router_area  orion_router_power
sst-unit-test/: macsim.sdl
sst-unit-test/references/hotspot/sdl1/: bp.stat.out  core.stat.out  dram.stat.out  general.stat.out  inst.stat.out  memory.stat.out  power_units.stat.out
sst-unit-test/references/hotspot/sdl2/: bp.stat.out  core.stat.out  dram.stat.out  general.stat.out  inst.stat.out  power_units.stat.out
sst-unit-test/traces/backprop/: kernel_config.txt
sst-unit-test/traces/hotspot/: kernel_config.txt
tools/: Makefile.am
tools/trace_reader/: Makefile.am
tools/x86_trace_generator/: CHANGE_LOG
validation/: Makefile  abstract.tex  main.tex
